--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "scripts": {
         "dev": "parcel src/index.html --open",
         "kit": "parcel src/uikit.html --open",
-        "build:uikit": "rm -rf build/uikit && parcel build src/uikit.html --out-dir build/uikit",
-        "build": "rm -rf build/uikit && parcel build src/index.html --out-dir build/www"
+        "build:uikit": "rm -rf build/uikit && parcel build src/uikit.html --public-url ./ --dist-dir build/uikit",
+        "build": "rm -rf build/uikit && parcel build src/index.html --public-url ./ --dist-dir build/www"
     },
     "author": "Mikhail Nepomnyashchiy",
     "license": "ISC",
@@ -18,6 +18,6 @@
     },
     "browserslist": [
         "last 5 version",
-        "ie 10"
+        "ie 11"
     ]
 }
