--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "dev": "parcel src/index.html --open",
         "kit": "parcel src/uikit.html --open",
+        "clear": "rm -rf build",
         "build:uikit": "rm -rf build/uikit && parcel build src/uikit.html --out-dir build/uikit",
         "build": "rm -rf build/uikit && parcel build src/index.html --out-dir build/www"
     },
